# atres

./: .gitignore  Doxyfile  atres.mkb  atres.mkf  configure  configure.ac  fileproperties.rc  formatting readme.txt  libatres.project  libatres.sln  libatres.vcproj  libatres.vcxproj  libatres.vcxproj.filters  libatres.workspace  libatres_2008.sln  libatres_2010.sln  libatres_2012.sln  libatres_WinRT.sln  libatres_WinRT.vcxproj  libatres_WinRT.vcxproj.filters  libatres_vs2012.sln  libatres_vs2013-winp8.sln  libatres_vs2013-winrt.sln  libatres_vs2013.sln  libatres_vs2015-uwp.sln  libatres_vs2015.sln
android-studio/demos/: settings.gradle
android-studio/demos-atres/: settings.gradle
android-studio/demos/demo_simple/: CMakeLists.txt  build.gradle
android-studio/demos/demo_simple/src/main/: AndroidManifest.xml
android-studio/demos/demo_simple/src/main/java/com/atres/demoSimple/: Main.java
android-studio/lib/: CMakeLists.txt  build.gradle
android-studio/lib/src/main/: AndroidManifest.xml
atres.xcodeproj/: project.pbxproj
atresttf/: Doxyfile  fileproperties.rc  libatresttf.project  libatresttf.vcproj  libatresttf.vcxproj  libatresttf.vcxproj.filters  libatresttf_WinRT.vcxproj  libatresttf_WinRT.vcxproj.filters
atresttf/android-studio/lib/: CMakeLists.txt  build.gradle
atresttf/android-studio/lib/src/main/: AndroidManifest.xml
atresttf/atresttf.xcodeproj/: project.pbxproj
atresttf/libatresttf.xcodeproj/: project.pbxproj
atresttf/props/: v110-winrt.configuration.props  v110.configuration.props  v110.default.props
atresttf/src/: FontResourceTtf.cpp  FontTtf.cpp  atresttf.cpp  atresttfUtil.h  freetype.h
atresttf/xcconfig/: Mac.xcconfig
branches/1.3/: libatres.project  libatres.sln  libatres.vcproj  libatres.vcxproj
branches/april_2.5/: fileproperties.rc  formatting readme.txt  libatres.vcxproj  libatres_2008.sln  libatres_WinRT.sln
branches/aprilui_refactor_2/: libatres.vcproj
branches/aprilui_refactor_3/: libatres.project
branches/interface_refactor/: Makefile.am  libatres.project  libatres.sln  libatres.vcproj  libatres.vcxproj  libatres.vcxproj.filters  libatres.workspace
branches/optimization_cache_render/: fileproperties.rc  formatting readme.txt  libatres.project  libatres.vcproj  libatres_2008.sln
branches/refactor/: libatres.sln  libatres.vcproj
branches/refactor_3/: fileproperties.rc  libatres.project  libatres.vcproj  libatres.vcxproj  libatres.vcxproj.filters  libatres_2008.sln
demos/: demo_basecode.cpp  demo_basecode.h
demos/demo_simple/: Package-uwp.appxmanifest  Package-winp8.appxmanifest  Package.appxmanifest  TemporaryKey.pfx  WMAppManifest.xml  demo_simple.cpp  demo_simple.project  demo_simple.vcproj  demo_simple.vcxproj  demo_simple.vcxproj.filters  demo_simple_WinRT.vcxproj  demo_simple_WinRT.vcxproj.filters
demos/glut_simple/: glut_simple.cpp  glut_simple.project  glut_simple.vcproj
demos/media/: arial.font  arial.tga  demo_simple.datadef  demo_simple.dts
demos/props/: v110-winrt.configuration.props  v110.configuration.props
docs/html/: _font_8h.html  _font_8h_source.html  _font_bitmap_8h.html  _font_bitmap_8h_source.html  _font_dynamic_8h.html  _font_dynamic_8h_source.html  _font_icon_map_8h.html  _font_icon_map_8h_source.html  _renderer_8h.html  _renderer_8h_source.html  _utility_8h.html  _utility_8h_source.html  annotated.html  atres_8h.html  atres_8h_source.html  class_type.html  classatres_1_1_border_character_definition-members.html  classatres_1_1_border_character_definition.html  classatres_1_1_border_texture_container-members.html  classatres_1_1_border_texture_container.html  classatres_1_1_cache.html  classatres_1_1_cache_entry_basic_text-members.html  classatres_1_1_cache_entry_basic_text.html  classatres_1_1_cache_entry_line-members.html  classatres_1_1_cache_entry_line.html  classatres_1_1_cache_entry_lines-members.html  classatres_1_1_cache_entry_lines.html  classatres_1_1_cache_entry_text-members.html  classatres_1_1_cache_entry_text.html  classatres_1_1_character_definition-members.html  classatres_1_1_character_definition.html  classatres_1_1_font-members.html  classatres_1_1_font.html  (+55 more)
lib/: readme.txt
libatres-ios.xcodeproj/: project.pbxproj
libatres.xcodeproj/: project.pbxproj
props/: v110-winrt.configuration.props  v110.configuration.props  v110.default.props
src/: Atres.cpp  Cache.h  Exception.cpp  Font.cpp  FontBitmap.cpp  FontDynamic.cpp  FontIconMap.cpp  FontResource.cpp  FontResourceBitmap.cpp  Makefile.am  Renderer.cpp  Util.cpp  Util.h  Utility.cpp  atres.cpp
trunk/: Info.plist  Makefile.am  Makefile.in  configure.ac  fileproperties.rc  formatting readme.txt  libatres.project  libatres.sln  libatres.vcproj  libatres.vcxproj  libatres.vcxproj.filters  libatres.workspace  libatres_2008.sln  libatres_2010.sln  libatres_2012.sln  libatres_WinRT.sln  libatres_WinRT.vcxproj  libatres_vs2012-winrt.sln  libatres_vs2012.sln  libatres_vs2013-winrt.sln  libatres_vs2013.sln
(+421 files in other folders)
